Improving documentation