@@ -6,21 +6,32 @@ layout: default
 Getting started
 ---------------
 
-**FROM BINARY PACKAGES:**
+**DOWNLOADING BINARY PACKAGES:**
 
 coming....
 
-**FROM SOURCE:**
+**BUILDING FROM SOURCE (FROM HEAD):**
 
 The main development site for the idega platform is [here](http://github.com/idega) on Github where all the submodules available for the idega plaform are hosted and located.
 
-**Make sure the following are installed:**
+**Make sure the following are installed for building and compiling:**
 
  * [Java 5 SDK](http://java.sun.com)
  * [Apache Maven 2.x] (http://maven.apache.org)
  * [Git](http://www.git-scm.org)
 
-Checkout the main (platform) project from github:
+For running you will need a Java EE Servet container and a an SQL database.
+
+**Tomcat and MySQL are recommended:** 
+
+ * [Tomcat 6.x](http://tomcat.apache.org) 
+ * [MySQL 5.1.x](http://www.mysql.org)
+ 
+It is also possible to run with an embedded Java database such as hsqldb:
+
+ * [MySQL 5.1.x](http://www.mysql.org)
+
+Now Checkout the main (platform) project from github:
 
 	git clone git://github.com/idega/com.idega.block.platform.git
 	cd com.idega.block.platform
@@ -67,3 +78,62 @@ Build all modules with maven:
 
 	cd com.idega.block.platform
 	mvn clean install
+	
+	
+Do the same with the addon and egov modules
+
+	git clone git://github.com/idega/com.idega.block.addon.git
+	cd com.idega.block.addon
+	git submodule init
+	git submodule update
+	mvn clean install
+	
+and:
+
+	git clone git://github.com/idega/com.idega.block.egov.git
+	cd com.idega.block.egov
+	git submodule init
+	git submodule update
+	mvn clean install
+	
+Now checkout the main idega webapp:
+
+	git clone git://github.com/idega/idega-webapp-base.git
+	cd idega-webapp-base
+	mvn clean package install
+	
+Now under the target you have a ready built Java webapp or WAR archive
+
+Deploy the webapp into your tomcat installation e.g. by directing tomcat to it with a context file.
+
+Create a file in your Tomcat installation under conf/Catalina/localhost named ROOT.xml:
+
+	<Context path="" docBase="[WEBAPP_FOLDER]/target/idega-base-webapp-4.1.3-SNAPSHOT" reloadable="false" debug="0" swallowOutput="true" liveDeploy="false">
+	
+	<Resource name="jdbc/DefaultDS" type="javax.sql.DataSource"
+	        url="jdbc:mysql://localhost/[DATABASENAME]?autoReconnect=true"
+	        driverClassName="com.mysql.jdbc.Driver"
+	        username="[DBUSER]"
+	        password="[DBPASSWORD]"
+	        maxActive="20"
+	        maxIdle="5"
+	        maxWait="10000"
+	        removeAbandoned="true"
+	        removeAbandonedTimeout="300"
+	        logAbandoned="true"
+	        testOnBorrow="true"
+	        validationQuery="SELECT 1"
+	  />
+	
+	</Context>
+
+
+If you run under the "/" (ROOT) context you will first need to remove the Tomcat default ROOT webapplication under webapps folder, and you will ned to create and specify the database that you point the system to and install a JDBC library jar file (in the tomcat's lib folder). The JDBC library for MySQL can be downloaded from Mysql [here](http://dev.mysql.com/downloads/connector/c/6.0.html).
+
+It is recommended to set Java options to increase the default memory allocation by setting the CATALINA_OPTS variable in your bin/startup.sh or bin/startup.bat like e.g.:
+
+export CATALINA_OPTS="-Xmx256M -XX:MaxPermSize=128M -Dfile.encoding=UTF-8 -Djava.awt.headless=true -XX:+HeapDumpOnOutOfMemoryError -XX:MinHeapFreeRatio=20 -XX:MaxHeapFreeRatio=40"
+
+Now start the Tomcat with bin/startup.sh or bin/startup.bat
+
+If everything went successfully you whould now have a running webapplication on (http://localhost:8080)[http://localhost:8080]. The default login is Administrator/idega.
